--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,10 @@
     <!-- Examples: -->
     <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>message_generation</build_depend>
+    <build_depend>std_msgs</build_depend>
+    <build_depend>geometry_msgs</build_depend>
+    <build_depend>ackermann_cmd_mux</build_depend>
+    <build_depend>ackermann_msgs</build_depend>
     <build_depend>tf2_ros</build_depend>
     <build_depend>nav_msgs</build_depend>
     <build_depend>roscpp</build_depend>
@@ -52,6 +56,12 @@
     <!--   <buildtool_depend>catkin</buildtool_depend> -->
     <!-- Use run_depend for packages you need at runtime: -->
 
+    <run_depend>message_generation</run_depend>
+    <run_depend>message_runtime</run_depend>
+    <run_depend>std_msgs</run_depend>
+    <run_depend>geometry_msgs</run_depend>
+    <run_depend>ackermann_cmd_mux</run_depend>
+    <run_depend>ackermann_msgs</run_depend>
     <run_depend>tf2_ros</run_depend>
     <run_depend>nav_msgs</run_depend>
     <run_depend>roscpp</run_depend>
@@ -63,7 +73,6 @@
     <run_depend>pcl_conversions</run_depend>
     <run_depend>nodelet</run_depend>
     <run_depend>robot_state_publisher</run_depend>
-    <run_depend>message_runtime</run_depend>
     <!-- Use test_depend for packages you need only for testing: -->
     <!--   <test_depend>gtest</test_depend> -->
     <buildtool_depend>catkin</buildtool_depend>
