--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,8 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="racecar@todo.todo">racecar</maintainer>
+  <maintainer email="czhao39@gmail.com">Charles Zhao</maintainer>
+  <maintainer email="bobobalink@gmail.com">Grey Golla</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -26,6 +27,8 @@
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="czhao39@gmail.com">Charles Zhao</author>
+  <author email="bobobalink@gmail.com">Grey Golla</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
