--- a/package.xml
+++ b/package.xml
@@ -51,6 +51,9 @@
     <build_depend>pcl_conversions</build_depend>
     <build_depend>urdf</build_depend>
     <build_depend>nodelet</build_depend>
+    <build_depend>move_base</build_depend>
+    <build_depend>gmapping</build_depend>
+    <build_depend>razor_imu_9dof</build_depend>
 
     <!-- Use buildtool_depend for build tool packages: -->
     <!--   <buildtool_depend>catkin</buildtool_depend> -->
@@ -73,6 +76,10 @@
     <run_depend>pcl_conversions</run_depend>
     <run_depend>nodelet</run_depend>
     <run_depend>robot_state_publisher</run_depend>
+    <run_depend>move_base</run_depend>
+    <run_depend>gmapping</run_depend>
+    <run_depend>razor_imu_9dof</run_depend>
+
     <!-- Use test_depend for packages you need only for testing: -->
     <!--   <test_depend>gtest</test_depend> -->
     <buildtool_depend>catkin</buildtool_depend>
