add DriveCommand message type to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ find_package(PCL REQUIRED)
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
+  DriveCommand.msg
   ObjectDetections.msg
   BlobDetections.msg
 )
