--- a/config/racecar-v2/local_costmap_params.yaml
+++ b/config/racecar-v2/local_costmap_params.yaml
@@ -3,8 +3,8 @@ local_costmap:
   robot_base_frame: base_link
   update_frequency: 4.0
   publish_frequency: 2.0
-  #static_map: false
-  static_map: true
+  static_map: false
+  #static_map: true
   rolling_window: true
   width: 6.0
   height: 6.0
