--- a/config/racecar-v2/vesc.yaml
+++ b/config/racecar-v2/vesc.yaml
@@ -4,11 +4,11 @@ speed_to_erpm_gain: 4614
 speed_to_erpm_offset: 0.0
 
 # servo value (0 to 1) =  steering_angle_to_servo_gain * steering angle (radians) + steering_angle_to_servo_offset
-steering_angle_to_servo_gain: -1.2135
-steering_angle_to_servo_offset: 0.5304
+steering_angle_to_servo_gain: -1.0321
+steering_angle_to_servo_offset: 0.463
 
 # publish odom to base link tf
-vesc_to_odom/publish_tf: true
+vesc_to_odom/publish_tf: false
 
 # car wheelbase is about 25cm 
 wheelbase: .25
