--- a/OpenPano/src/Makefile
+++ b/OpenPano/src/Makefile
@@ -21,7 +21,7 @@ else
 	OMP_FLAG=-fopenmp
 endif
 
-OPTFLAGS ?= -O3 -msse3 -march=native
+OPTFLAGS ?= -O3 -march=native
 #OPTFLAGS ?= -g3 -fsanitize=address,undefined -O2 -lasan
 #OPTFLAGS ?= -g3 -fsanitize=leak -O2 -lubsan
 DEFINES = -DDEBUG  	# comment out this line improves speed
