--- a/config/robot_localization.yaml
+++ b/config/robot_localization.yaml
@@ -81,7 +81,7 @@ odom0: /vesc/odom
 # if unspecified, effectively making this parameter required for each sensor.
 odom0_config: [true,  true,  false,
                false, false, false,
-               false, false, false,
+               false, true, false,
                false, false, true,
                false, false, false]
 
@@ -122,7 +122,7 @@ odom0_relative: false
 
 imu0: /imu_fixed
 imu0_config: [false, false, false,
-              true,  true,  true,
+              true,  true,  false,
               false, false, false,
               true,  true,  true,
               true,  true,  true]
