--- a/config/racecar-v2/vesc.yaml
+++ b/config/racecar-v2/vesc.yaml
@@ -1,6 +1,7 @@
 
 # erpm (electrical rpm) = speed_to_erpm_gain * speed (meters / second) + speed_to_erpm_offset
-speed_to_erpm_gain: 4614
+#speed_to_erpm_gain: 4614
+speed_to_erpm_gain: 2841
 speed_to_erpm_offset: 0.0
 
 # servo value (0 to 1) =  steering_angle_to_servo_gain * steering angle (radians) + steering_angle_to_servo_offset
@@ -10,8 +11,8 @@ steering_angle_to_servo_offset: 0.463
 # publish odom to base link tf
 vesc_to_odom/publish_tf: false
 
-# car wheelbase is about 25cm 
-wheelbase: .25
+# car wheelbase is about 38cm 
+wheelbase: .38
 
 vesc_driver:
   port: /dev/ttyACM0
