--- a/config/racecar-v2/base_local_planner_params.yaml
+++ b/config/racecar-v2/base_local_planner_params.yaml
@@ -1,7 +1,8 @@
 TrajectoryPlannerROS:
   max_vel_x: 0.1
   min_vel_x: 0.01
-  max_val_theta: 1.0
+  max_vel_theta: 0.3
+  min_in_place_vel_theta: 0.1
   
   acc_lim_theta: 3.2
   acc_lim_x: 2.5
