--- a/config/racecar-v2/costmap_common_params.yaml
+++ b/config/racecar-v2/costmap_common_params.yaml
@@ -1,8 +1,8 @@
 obstacle_range: 10.0
-raytrace_range: 15.0
+raytrace_range: 12.0
 footprint: [[-0.22, 0.26], [0.22, 0.26], [0.22, -0.26], [-0.22, -0.26]]
 inflation_radius: 0.5
 
-observation_sources: laser_scan_sensor
-
-laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
+obstacles:
+    observation_sources: laser_scan_sensor
+    laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
