--- a/config/robot_localization.yaml
+++ b/config/robot_localization.yaml
@@ -124,15 +124,15 @@ imu0: /imu_fixed
 imu0_config: [false, false, false,
               true,  true,  false,
               false, false, false,
-              true,  true,  true,
+              true,  true,  false,
               true,  true,  true]
 imu0_nodelay: false
 imu0_differential: false
-imu0_relative: true
+imu0_relative: false
 imu0_queue_size: 5
-imu0_pose_rejection_threshold: 0.8                 # Note the difference in parameter names
-imu0_twist_rejection_threshold: 0.4                #
-imu0_linear_acceleration_rejection_threshold: 0.8  #
+imu0_pose_rejection_threshold: 1.0                 # Note the difference in parameter names
+imu0_twist_rejection_threshold: 1.0                #
+imu0_linear_acceleration_rejection_threshold: 3.0  #
 
 # [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
 # this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
