adjust navigation stack params

--- a/config/racecar-v2/base_local_planner_params.yaml
+++ b/config/racecar-v2/base_local_planner_params.yaml
@@ -1,8 +1,9 @@
 TrajectoryPlannerROS:
-  max_vel_x: 2.0
-  min_vel_x: 0.2
-  max_vel_theta: 2.0
-  min_in_place_vel_theta: 1.0
+  max_vel_x: 1.5
+  min_vel_x: 0.3
+  max_vel_theta: 1.0
+  min_in_place_vel_theta: 0.5
+  escape_vel: -0.3
   
   acc_lim_theta: 3.2
   acc_lim_x: 2.5
@@ -11,3 +12,6 @@ TrajectoryPlannerROS:
   meter_scoring: true
 
   holonomic_robot: false
+
+  yaw_goal_tolerance: 0.5
+  xy_goal_tolerance: 0.1
