--- a/config/racecar-v2/base_local_planner_params.yaml
+++ b/config/racecar-v2/base_local_planner_params.yaml
@@ -1,8 +1,9 @@
 TrajectoryPlannerROS:
   max_vel_x: 1.5
   min_vel_x: 0.3
-  max_vel_theta: 1.0
-  min_in_place_vel_theta: 0.5
+  max_vel_theta: 1.5
+  min_vel_theta: 0.3
+  min_in_place_vel_theta: 0.3
   escape_vel: -0.3
   
   acc_lim_theta: 3.2
@@ -15,3 +16,7 @@ TrajectoryPlannerROS:
 
   yaw_goal_tolerance: 0.5
   xy_goal_tolerance: 0.1
+
+  pdist_scale: 0.6          # weighting for how much controller should stay close to the path it was given, maximal possible value is 5.0
+  gdist_scale: 0.8          # weighting for how much controller should attempt to reach its local goal, also controls speed, maximal possible value is 5.0
+  occdist_scale: 0.01       # weighting for how much controller should attempt to avoid obstacles
